--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "iplayer",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Video player base on video.js for vue2.",
+  "main": "dist/iplayer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --config build/webpack.demo.js",
     "build": "webpack --config build/webpack.build.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "dandanDQ",
+  "keywords": ["video", "player", "video.js", "vue2"],
+  "license": "MIT",
   "devDependencies": {
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
@@ -24,5 +24,12 @@
   },
   "dependencies": {
     "video.js": "^7.20.2"
+  },
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:dandanDQ/IPlayer.git"
   }
 }
