--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "svg-sprite-loader": "^6.0.11",
     "vue": "^2.7.10",
     "vue-loader": "^15.9.8",
     "vue-style-loader": "^4.1.3",
