--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "vue-template-compiler": "^2.7.10",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.0"
+    "webpack-dev-server": "^4.11.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "video.js": "^7.20.2"
