--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "dev": "webpack-dev-server --config build/webpack.demo.js",
     "build": "webpack --config build/webpack.build.js",
-    "release": "node ./build/release.js"
+    "release": "node ./build/release.js",
+    "prettier": "prettier --write ."
   },
   "author": "dqdandan",
   "keywords": [
@@ -28,6 +29,7 @@
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^7.0.3",
+    "prettier": "^2.7.1",
     "sass-loader": "^13.0.2",
     "svg-sprite-loader": "^6.0.11",
     "vue": "^2.7.10",
