--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "video.js": "^7.20.2"
   },
   "files": [
