--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-iplayer",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "Video player base on video.js for vue2.",
   "main": "dist/iplayer.js",
   "unpkg": "dist/iplayer.js",
@@ -8,7 +8,7 @@
   "jspm": {
     "main": "dist/iplayer.js",
     "registry": "npm",
-    "format": "esm"
+    "format": "browser"
   },
   "scripts": {
     "dev": "webpack-dev-server --config build/webpack.demo.js",
