feat: release version 2.0.5

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "jspm": {
     "main": "dist/iplayer.js",
     "registry": "npm",
-    "format": "browser"
+    "format": "esm"
   },
   "scripts": {
     "dev": "webpack-dev-server --config build/webpack.demo.js",
