--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "video.js": "^7.20.2"
+    "hls.js": "^1.2.4",
+    "lodash": "^4.17.21"
   },
   "files": [
     "dist"
